--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <section id="contact">
     <h2>Contact</h2>
     <p class="contact-info">📧 Email: <a href="mailto:your.email@example.com">ajeethachandrakanthan@gmail.com</a></p>
-    <p class="contact-info">💻 GitHub: <a href="https://github.com/yourgithub" target="_blank">github.com/yourgithub</a></p>
+    <p class="contact-info">💻 GitHub: <a href="https://github.com/yourgithub" target="_blank">github.com/ajeetha1704</a></p>
     <p class="contact-info">🌐 LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/ajeetha-tech</a></p>
   </section>
 
@@ -134,3 +134,4 @@
 
 </body>
 </html>
+
